src/objects/OrderApi__Subscription__c.object
<CustomObject>
    <fields>
        <fullName>OrderApi__System_Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Refresh Subscription fields with updated data as well as update related Invoices and Scheduled Payments (if applicable) related to the Subscription.</description>
        <inlineHelpText>Refresh Subscription fields with updated data as well as update related Invoices and Scheduled Payments (if applicable) related to the Subscription.</inlineHelpText>
        <label>Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Upgraded_Date__c</fullName>
        <description>** System Calculated Override ** The date the Subscription was upgraded to another &quot;Subscription&quot; Item.</description>
        <inlineHelpText>** System Calculated Override ** The date the Subscription was upgraded to another &quot;Subscription&quot; Item.</inlineHelpText>
        <label>Upgraded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Upgraded_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Defines the related upgraded subscription.</description>
        <inlineHelpText>** System Calculated Override ** Defines the related upgraded subscription.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Valid_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Valid if the linked Payment Method is valid -- determined by Payment Method expiration and the result (Success or Decline) of the last E-Payment related to the Payment Method. Defaults unchecked if no Payment Method linked.</description>
        <inlineHelpText>Valid if the linked Payment Method is valid -- determined by Payment Method expiration and the result (Success or Decline) of the last E-Payment related to the Payment Method. Defaults unchecked if no Payment Method linked.</inlineHelpText>
        <label>Valid Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>Journal_Subs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrderApi__Item__c</field>
            <operation>contains</operation>
            <value>journal</value>
        </filters>
        <label>Journal Subs</label>
        <sharedTo>
            <role>Information_Technology</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Customer_Link__c</columns>
        <columns>OrderApi__Status__c</columns>
        <columns>OrderApi__Subscription_Plan__c</columns>
        <columns>OrderApi__Item__c</columns>
        <columns>OrderApi__Item_Class__c</columns>
        <columns>OrderApi__Subscription_Dues_Total__c</columns>
        <columns>OrderApi__Activated_Date__c</columns>
        <columns>OrderApi__Last_Renewed_Date__c</columns>
        <columns>OrderApi__Current_Term_Start_Date__c</columns>
        <columns>OrderApi__Current_Term_End_Date__c</columns>
        <columns>OrderApi__Is_Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OrderApi__Item__c</field>
            <operation>contains</operation>
            <value>affiliate</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/10/2018 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Subscription ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>